@@ -20,7 +20,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
-import org.springframework.dao.DuplicateKeyException;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
@@ -29,7 +29,6 @@ import uk.gov.hmcts.reform.iacaseapi.domain.entities.AppealType;
 
 @MockitoSettings(strictness = Strictness.LENIENT)
 @ExtendWith(MockitoExtension.class)
-@SuppressWarnings("unchecked")
 class DbAppealReferenceNumberGeneratorTest {
 
     private static final int SEQUENCE_SEED = 50000;
@@ -46,7 +45,6 @@ class DbAppealReferenceNumberGeneratorTest {
     private ArgumentCaptor<MapSqlParameterSource> selectParametersCaptor;
     private MapSqlParameterSource expectedParameters;
     private String expectedAppealReferenceNumber = "PA/12345/2017";
-    private String expectedDetainedAppealReferenceNumber = "DE/12345/2017";
 
     private DbAppealReferenceNumberGenerator dbAppealReferenceNumberGenerator;
 
@@ -108,7 +106,7 @@ class DbAppealReferenceNumberGeneratorTest {
         MapSqlParameterSource actualInsertParameters =
             insertParametersCaptor
                 .getAllValues()
-                .get(0);
+                .getFirst();
 
         assertEquals(caseId, actualInsertParameters.getValue("caseId"));
         assertEquals(appealType.name(), actualInsertParameters.getValue("appealType"));
@@ -116,13 +114,11 @@ class DbAppealReferenceNumberGeneratorTest {
         assertEquals(SEQUENCE_SEED, actualInsertParameters.getValue("seed"));
 
         MapSqlParameterSource actualSelectParameters =
-            insertParametersCaptor
+            selectParametersCaptor
                 .getAllValues()
-                .get(0);
+                .getFirst();
 
         assertEquals(caseId, actualSelectParameters.getValue("caseId"));
-        assertEquals(appealType.name(), actualSelectParameters.getValue("appealType"));
-        assertEquals(currentYear, actualSelectParameters.getValue("year"));
     }
 
     @Test
@@ -143,7 +139,7 @@ class DbAppealReferenceNumberGeneratorTest {
                 contains("INTO ia_case_api.appeal_reference_numbers")
             ),
             any(MapSqlParameterSource.class)
-        )).thenThrow(DuplicateKeyException.class);
+        )).thenThrow(new DataIntegrityViolationException("Duplicate key violation"));
 
         String appealReferenceNumber =
             dbAppealReferenceNumberGenerator.generate(caseId, appealType);
@@ -154,14 +150,13 @@ class DbAppealReferenceNumberGeneratorTest {
     @Test
     void should_throw_when_appeal_reference_number_for_case_not_found() {
 
-        when(jdbcTemplate.queryForObject(
+        when(jdbcTemplate.update(
             and(
-                contains("SELECT"),
-                contains("FROM ia_case_api.appeal_reference_numbers")
+                contains("INSERT"),
+                contains("INTO ia_case_api.appeal_reference_numbers")
             ),
-            any(MapSqlParameterSource.class),
-            eq(String.class)
-        )).thenReturn(expectedAppealReferenceNumber);
+            any(MapSqlParameterSource.class)
+        )).thenReturn(0);
 
         when(jdbcTemplate.queryForObject(
             and(
